# kyber-not-it

./: .gitignore  Cargo.toml  README.md  V_0x3b4bf1.txt  V_0x3dd31e.txt  V_0x400b3a.txt  build.rs  check_flips.py  mem.py  offset.txt  test_attack.sh
pagemap/: Makefile  attacktest  attacktest.c  pagemap  pagemap2  pagetest  pagetest.c
pagesanitycheck/: Makefile  attacktest.c  checkpfns.py  empty  empty.c  page.c  pagetest.c
src/: main.rs  tui.rs
src/attack/: attack.rs  degrade.rs  mod.rs
src/attack_tester/: mod.rs  tester.rs
src/degradation/: degrade  degrade.c  loop_through_coreaffinities.sh  run_degradation.sh
src/profiler/: mod.rs  pagefinder.rs  rowhammer.rs  utils.rs
