[package]
name = "kyber-not-it"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.9"
memmap2 = "0.7.1"
procfs = "0.15.1"
strum = "0.25.0"
strum_macros = "0.25.2"
nix = "0.27.1"
clap = "4.4.2"
